--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
 permalink: pretty
-title: 'digital wolk'
+title: 'digitalwolk'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
@@ -33,7 +33,7 @@ defaults:
       layout: "team"
 
 sass:
-  style: compressed # possible values: nested expanded compact compressed
+  style: expanded # possible values: nested expanded compact compressed
 
 plugins:
   - jekyll-environment-variables
