--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'balbino@digitalwolk.com'
+phone: '44 984 348 366'
 contact_button_link: 'contact'
