--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,4 @@
-email: 'balbino@digitalwolk.com'
+partner: Rodrigo Balbino
+email: 'balbino.silva@gmail.com'
 phone: '44 984 348 366'
 contact_button_link: 'contact'
