--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
 google_analytics_id: ""  
 meta_twitter_site: "@rodbasec"
 meta_twitter_creator: "@rodbasec"
-copyright_text: '<a class="zerostatic" href="https://balbino.dev">www.balbino.dev</a>'
+copyright_text: '<a class="zerostatic" href="https://digitalwolk.com">www.digitalwolk.com</a>'
