--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ defaults:
 
 
 sass:
-  style: expanded # possible values: nested expanded compact compressed
+  style: compact # possible values: nested expanded compact compressed
 
 plugins:
   - jekyll-environment-variables
