--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,33 +1,39 @@
 main:
+  - name: "Home"
+    url: "/"
+    weight: 1
   - name: "Produtos"
     url: "/products/"
-    weight: 1
+    weight: 2
   - name: "Serviços"
     url: "/services/"
-    weight: 2
+    weight: 3
   - name: "Time"
     url: "/team/"
-    weight: 3
+    weight: 4
   - name: "Sobre"
     url: "/about/"
-    weight: 4
+    weight: 5
   - name: "Contato"
     url: "/contact/"
-    weight: 5
+    weight: 6
 
 footer:
   - name: "Home"
     url: "/"
     weight: 1
-  - name: "Contato"
-    url: "/contact/"
+  - name: "Produtos"
+    url: "/products/"
     weight: 2
+  - name: "Serviços"
+    url: "/services/"
+    weight: 3
   - name: "Time"
     url: "/team/"
-    weight: 3
+    weight: 4
   - name: "Sobre"
     url: "/about/"
-    weight: 4
+    weight: 5
   - name: "Contato"
     url: "/contact/"
-    weight: 5
+    weight: 6
