--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-partner: Rodrigo Balbino
-email: 'balbino.silva@gmail.com'
+# partner: Gilmar Rodrigues
+email: 'comercial@digitalwolk.com'
 phone: '44 984 348 366'
 contact_button_link: 'contact'
