--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
-google_analytics_id: ""  
+google_analytics_id: "G-5XWC18JLT2"  
 meta_twitter_site: "@rodbasec"
 meta_twitter_creator: "@rodbasec"
 copyright_text: '<a class="zerostatic" href="https://digitalwolk.com">www.digitalwolk.com</a>'
