--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,5 @@
 google_analytics_id: "G-11ZZZRHDL7"  
 meta_twitter_site: "@rodbasec"
 meta_twitter_creator: "@rodbasec"
-copyright_text: '<a class="zerostatic" href="https://digitalwolk.com">www.digitalwolk.com</a>'
+# copyright_text: '<a class="zerostatic" href="https://digitalwolk.com">©2023 Digitalwolk. All rights reserved.</a>'
+copyright_text: '©2023 Digitalwolk. All rights reserved.'
